2024-01-20 13:23:38
User: Amirali
Map name: map7
Time spent: 14s
Result: Lost
2024-01-20 13:21:38
User: Akbar
Map name: map7
Time spent: 3s
Result: Lost
2024-01-20 13:13:29
User: Amirali
Map name: map11
Time spent: 5s
Result: Lost
2024-01-20 13:13:13
User: Amirali
Map name: map1
Time spent: 2s
Result: Lost
2024-01-20 13:09:21
User: Ali
Map name: map1
Time spent: 2s
Result: Win
2024-01-20 13:08:43
User: Amirali
Map name: map10
Time spent: 6s
Result: Lost
2024-01-20 12:11:55
User: Amirali
Map name: map1
Time spent: 3s
Result: Lost
2024-01-20 12:11:28
User: Amirali
Map name: map13
Time spent: 85s
Result: Lost
2024-01-19 15:06:14
User: ali
Map name: map1
Time spent: 38s
Result: Lost
2024-01-19 15:05:13
User: mehrgan
Map name: map4
Time spent: 4s
Result: Win
2024-01-19 15:04:45
User: mehrgan
Map name: map3
Time spent: 15s
Result: Win
2024-01-19 15:03:49
User: mehrgan
Map name: map12
Time spent: 1s
Result: Win
2024-01-19 15:03:13
User: mehrgan
Map name: map12
Time spent: 20s
Result: Win
2024-01-19 15:02:06
User: ali
Map name: map5
Time spent: 152s
Result: Lost
2024-01-19 14:57:58
User: mehrgan
Map name: map6
Time spent: 60s
Result: Lost
2024-01-19 14:54:08
User: mehrgan
Map name: map7
Time spent: 139s
Result: Lost
2024-01-18 20:17:04
User: Amin
Map name: map10
Time spent: 9s
Result: Lost
2024-01-18 20:11:18
User: Amin
Map name: 
Time spent: 3s
Result: Lost
2024-01-18 20:08:43
User: Amin
Map name: map1
Time spent: 3s
Result: Lost
2024-01-18 20:04:03
User: Amin
Map name: map6
Time spent: 5s
Result: Lost
2024-01-18 19:44:27
User: Amin
Map name: map7
Time spent: 2s
Result: Lost
2024-01-17 16:23:07
User: Amin
Map name: map10
Time spent: 7
Result: Lost
2024-01-17 13:34:00
User: Amin
Map name: map4
Time spent: 1
Result: Win
2024-01-14 18:14:52
User: Amirali
Map name: map1
Time spent: 28
Result: Lost
2024-01-14 17:33:01
User: Amin
Map name: map4
Time spent: 1
Result: Win
2024-01-14 16:57:14
User: Amin
Map name: 
Time spent: 1
Result: Win
2024-01-14 16:55:46
User: Amin
Map name: 